--- a/sass/site/blog/single-post-layouts/_comment-form.scss
+++ b/sass/site/blog/single-post-layouts/_comment-form.scss
@@ -168,7 +168,7 @@
 
 .comments-area {
     border-top: 1px solid $color-border-content;
-    margin-top: 2em;
+    margin-top: 20px;
     @media(max-width: $mx-col-md) {
         margin-top: 1.5em;
     }
