--- a/sass/site/blog/single-post-layouts/_single-post-common.scss
+++ b/sass/site/blog/single-post-layouts/_single-post-common.scss
@@ -16,7 +16,7 @@
 	.post-navigation {
 		
 		margin: 0;
-		padding: 2em 0 0;
+		padding: 20px 0 0;
 		border-top: 1px solid $color-border-content;
 		@media(max-width: $mx-col-md) {
 	        padding-top: 1.5em;
